kubernetes/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: clouddeployx-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: clouddeployx

  template:

    metadata:
      labels:
        app: clouddeployx

    spec:
      containers:
      - name: clouddeployx-container
        image: clouddeployx:v1
        imagePullPolicy: IfNotPresent
