kubernetes/pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: clouddeployx-pod

spec:
  containers:
  - name: nginx
    image: nginx
