kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: clouddeployx-service

spec:
  selector:
    app: clouddeployx

  ports:
    - port: 80
      targetPort: 8000

  type: NodePort
